--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,8 +7,11 @@
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
+<a class="nav-link" href="https://github.com/waghaditya/emergency-ventilators/wiki">Wiki for Designs</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="https://github.com/waghaditya/emergency-ventilators">GitHub Repo</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
 </li>
